// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileShares > collaborators list > renders sharedWithLabel and sharee list 1`] = `
"<div id="oc-files-sharing-sidebar" class="relative rounded-sm">
  <div class="flex justify-between items-center">
    <div class="flex">
      <h3 class="font-semibold text-base m-0" data-msgid="Share with people" data-current-language="en">Share with people</h3>
      <oc-contextual-helper-stub title="Share with people" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://docs.opencloud.eu/docs/user/sharing" text="Use the input field to search for users and groups. Select them to share the item." class="pl-1"></oc-contextual-helper-stub>
    </div>
    <copy-private-link-stub resource="undefined"></copy-private-link-stub>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Share" invitelabel="" class="mt-2"></invite-collaborator-form-stub>
  <div id="files-collaborators-headline" class="flex items-center justify-between h-10 mt-2">
    <h4 class="font-semibold my-0">Shared with</h4>
  </div>
  <portal-target name="app.files.sidebar.sharing.shared-with.top" slot-props="[object Object]" multiple="true"></portal-target>
  <ul id="files-collaborators-list" class="oc-list oc-list-divider m-0" aria-label="Share receivers">
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="true" removable="true" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <portal-target name="app.files.sidebar.sharing.shared-with.bottom" slot-props="[object Object]" multiple="true"></portal-target>
  </ul>
  <div class="flex justify-center"><button type="button" class="oc-button-secondary oc-button-raw oc-button-secondary-raw gap-2 justify-center text-base min-h-4 oc-button cursor-pointer disabled:opacity-60 disabled:cursor-default toggle-shares-list-btn">
      <!--v-if-->
      <!-- @slot Content of the button --> Show less
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`FileShares > current space > loads space members if a space is given and the current user is member 1`] = `
"<div id="oc-files-sharing-sidebar" class="relative rounded-sm">
  <div class="flex justify-between items-center">
    <div class="flex">
      <h3 class="font-semibold text-base m-0" data-msgid="Share with people" data-current-language="en">Share with people</h3>
      <oc-contextual-helper-stub title="Share with people" endtext="" list="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" readmorelink="https://docs.opencloud.eu/docs/user/sharing" text="Use the input field to search for users and groups. Select them to share the item." class="pl-1"></oc-contextual-helper-stub>
    </div>
    <copy-private-link-stub resource="undefined"></copy-private-link-stub>
  </div>
  <invite-collaborator-form-stub savebuttonlabel="Share" invitelabel="" class="mt-2"></invite-collaborator-form-stub>
  <div id="files-collaborators-headline" class="flex items-center justify-between h-10 mt-2">
    <h4 class="font-semibold my-0">Shared with</h4>
  </div>
  <portal-target name="app.files.sidebar.sharing.shared-with.top" slot-props="[object Object]" multiple="true"></portal-target>
  <ul id="files-collaborators-list" class="oc-list oc-list-divider mb-4" aria-label="Share receivers">
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="false" removable="false" resourcename="[Function]" islocked="[Function]" isspaceshare="false"></collaborator-list-item-stub>
    </li>
    <portal-target name="app.files.sidebar.sharing.shared-with.bottom" slot-props="[object Object]" multiple="true"></portal-target>
  </ul>
  <!--v-if-->
  <div class="flex items-center justify-between mt-2">
    <h4 class="font-semibold my-2">Space members</h4>
  </div>
  <ul id="space-collaborators-list" class="oc-list oc-list-divider overflow-hidden m-0" aria-label="Space members">
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="false" removable="false" resourcename="[Function]" islocked="false" isspaceshare="true"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub share="[object Object]" modifiable="false" removable="false" resourcename="[Function]" islocked="false" isspaceshare="true"></collaborator-list-item-stub>
    </li>
  </ul>
  <!--v-if-->
</div>"
`;
